[gd_scene load_steps=8 format=2]

[ext_resource path="res://Components/Textures/ActionRing.png" type="Texture" id=1]
[ext_resource path="res://Components/Textures/ActionCircle.png" type="Texture" id=2]
[ext_resource path="res://Components/Textures/Look.png" type="Texture" id=3]
[ext_resource path="res://Components/Textures/Pickup.png" type="Texture" id=4]
[ext_resource path="res://Components/Textures/UseItem.png" type="Texture" id=5]
[ext_resource path="res://Source/highlight.gd" type="Script" id=6]
[ext_resource path="res://Components/Actions.gd" type="Script" id=7]

[node name="Actions" type="Node2D"]
script = ExtResource( 7 )

[node name="cancel" type="TextureButton" parent="."]
margin_left = -305.0
margin_top = -203.0
margin_right = 299.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionRing" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Look" type="Sprite" parent="ActionRing"]
position = Vector2( 0, -34 )
texture = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Looking" type="Sprite" parent="ActionRing/Look"]
texture = ExtResource( 3 )

[node name="Look" type="TextureButton" parent="ActionRing/Look"]
margin_left = -13.0
margin_top = -13.0
margin_right = 13.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Take" type="Sprite" parent="ActionRing"]
position = Vector2( 31, 14 )
texture = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Pickup" type="Sprite" parent="ActionRing/Take"]
texture = ExtResource( 4 )

[node name="Take" type="TextureButton" parent="ActionRing/Take"]
margin_left = -13.0
margin_top = -13.0
margin_right = 13.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Use" type="Sprite" parent="ActionRing"]
position = Vector2( -31, 14 )
texture = ExtResource( 2 )
script = ExtResource( 6 )

[node name="UseItem" type="Sprite" parent="ActionRing/Use"]
position = Vector2( 0, -1 )
texture = ExtResource( 5 )
flip_h = true

[node name="Use" type="TextureButton" parent="ActionRing/Use"]
margin_left = -13.0
margin_top = -13.0
margin_right = 13.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
[connection signal="mouse_entered" from="ActionRing/Look/Look" to="ActionRing/Look" method="_on_item_mouse_entered"]
[connection signal="mouse_exited" from="ActionRing/Look/Look" to="ActionRing/Look" method="_on_item_mouse_exited"]
[connection signal="pressed" from="ActionRing/Look/Look" to="." method="_on_Look_pressed"]
[connection signal="mouse_entered" from="ActionRing/Take/Take" to="ActionRing/Take" method="_on_item_mouse_entered"]
[connection signal="mouse_exited" from="ActionRing/Take/Take" to="ActionRing/Take" method="_on_item_mouse_exited"]
[connection signal="pressed" from="ActionRing/Take/Take" to="." method="_on_Take_pressed"]
[connection signal="mouse_entered" from="ActionRing/Use/Use" to="ActionRing/Use" method="_on_item_mouse_entered"]
[connection signal="mouse_exited" from="ActionRing/Use/Use" to="ActionRing/Use" method="_on_item_mouse_exited"]
[connection signal="pressed" from="ActionRing/Use/Use" to="." method="_on_Use_pressed"]
